syntax = "proto3";

package store_attribute.v1;

// StoreAttributeService defines the gRPC service for managing store attributes.
service StoreAttributeService {
  // rpc to get all attributes for a category
  rpc GetAttributesByCategoryId(GetAttributesByCategoryIdRequest) returns (AttributeList) {}
  // rpc to create a new attribute
  rpc CreateAttribute(CreateAttributeRequest) returns (Id) {}
  // rpc to update an existing attribute
  rpc UpdateAttribute(UpdateAttributeRequest) returns (Id) {}
  // rpc to delete an attribute by its ID
  rpc DeleteAttribute(Id) returns (StatusResponse) {}
  // rpc to change the position of an attribute
  rpc ChangeAttributePosition(ChangeAttributePositionRequest) returns (AttributeResponse) {}
  // rpc to create or update an attribute translation
  rpc UpsertAttributeTranslation(AttributeTranslationRequest) returns (Id) {}
  // rpc to delete an attribute translation by its ID
  rpc DeleteAttributeTranslation(Id) returns (StatusResponse) {}
}

// declaration of Id message
message Id {
  string id = 1;
}

// Message representing a status response
message StatusResponse {
  bool success = 1;
  string message = 2;
}

// Request to get attributes by category ID
message GetAttributesByCategoryIdRequest {
  string category_id = 1;
}

// Message representing a list of attributes
message AttributeList {
  repeated AttributeWithTranslations data = 1;
}

// Message representing an attribute
message AttributeResponse {
  string id = 1;
  string category_id = 2;
  string slug = 3;
  int32 sort_order = 4;
}

// Message representing an attribute with translations
message AttributeWithTranslations {
  string id = 1;
  string category_id = 2;
  string slug = 3;
  int32 sort_order = 4;
  repeated AttributeTranslationResponse translations = 5;
}

// Message representing an attribute translation
message AttributeTranslationResponse {
  string id = 1;
  string language = 2;
  string name = 3;
}

// Message for creating a new attribute
message CreateAttributeRequest {
  string category_id = 1;
  string slug = 2;
}

// Message for updating an existing attribute
message UpdateAttributeRequest {
  string id = 1;
  optional string slug = 2;
}

// Message for changing the position of an attribute
message ChangeAttributePositionRequest {
  string id = 1;
  int32 sort_order = 2;
}

// Message for creating or updating an attribute translation
message AttributeTranslationRequest {
  string attribute_id = 1;
  string language = 2;
  string name = 3;
}

// Command to generate TypeScript code with NestJS options, using null for optional fields and Date for timestamps
// protoc -I ./proto ./proto/store-attribute.proto --ts_proto_out=./src/generated-types --ts_proto_opt=nestJs=true --ts_proto_opt=useNullAsOptional=true --ts_proto_opt=useDate=true
