syntax = "proto3";

package store_item.v1;

import "google/protobuf/timestamp.proto";

// StoreItemService defines the gRPC service for managing store items.
service StoreItemService {
  // rpc to get store items by category ID with options for a specific language
  rpc GetStoreItemsByCategoryIdWithOption(GetStoreItemsByCategoryIdWithOptionRequest) returns (StoreItemListWithOption) {}
  // rpc to get a store item by its ID and language
  rpc GetStoreItemById(GetStoreItemByIdRequest) returns (StoreItemWithOption) {}
}

// declaration of GetStoreItemsByCategoryIdWithOptionRequest message
message GetStoreItemsByCategoryIdWithOptionRequest {
  string category_id = 1;
  string language = 2;
}

// declaration of GetStoreItemByIdRequest message
message GetStoreItemByIdRequest {
  string item_id = 1;
  string language = 2;
}

// Message representing a list of store items with options
message StoreItemListWithOption {
  repeated StoreItemWithOption data = 1;
}

// Message representing a store item with flattened translations and variants
message StoreItemWithOption {
  string id = 1;
  optional string brand = 2;
  string slug = 3;
  bool is_available = 4;
  int32 sort_order = 5;
  optional google.protobuf.Timestamp expected_date = 6;
  string category_id = 7;
  string title = 8;
  optional string description = 9;
  optional string detailed_description = 10;
  repeated ItemImage images = 11;
  repeated ItemVariant variants = 12;
  repeated ItemBasePrice prices = 13;
  repeated ItemInfoAttribute attributes = 14;
}

// Message representing an informational attribute (no price impact)
message ItemInfoAttribute {
  string slug = 1;
  string name = 2;
  string value = 3;
}

// Message representing a product variant (one per attribute value)
message ItemVariant {
  string id = 1;
  string attribute_slug = 2;
  string attribute_name = 3;
  string attribute_value = 4;
  optional string regular_price = 5;
  optional string discount_price = 6;
  optional string wholesale_price = 7;
  string currency = 8;
}

// Message representing a base price for items without variants
message ItemBasePrice {
  string price_type = 1;
  string value = 2;
  string currency = 3;
}

// Message representing an image for a store item
message ItemImage {
  string id = 1;
  string url = 2;
  optional string alt = 3;
  int32 sort_order = 4;
}

// Command to generate TypeScript code with NestJS options, using null for optional fields and Date for timestamps
// protoc -I ./proto ./proto/store-item.proto --ts_proto_out=./src/generated-types --ts_proto_opt=nestJs=true --ts_proto_opt=useNullAsOptional=true --ts_proto_opt=useDate=true
